--- a/css/style.css
+++ b/css/style.css
@@ -1464,3 +1464,10 @@ transition: .5s;
 .navbar-outer {
     margin-top:  -25px;
 }
+
+
+@media(max-width: 550px){
+    .container .text{ display: none;}
+}
+    
+    
