--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
     background: #ffffff;
     height: 75px;
     padding: 15px 0;
+    margin-bottom:15px;
 }
 
 .container  {
@@ -95,8 +96,8 @@
 }
 
 .navbar-content{
-    padding: 15px 0 ;
-    margin-top: 15px;
+    padding: 0px ;
+    margin-top: 0px;
 }
 
 .navbar-content  li {
@@ -117,8 +118,9 @@
     display: inline-block;
     color: Black;
     padding: 15px;
-    font-weight: 500;
+    font-weight: 700;
     letter-spacing: 1px;
+    font-size:16px;
 }
 
 .navbar-content li a:hover{
@@ -128,7 +130,7 @@ color:  red;
 .navbar-content  {
     float: left;
     width: 75%;
-    padding-left:80px ;
+    padding-left:0px ;
 
 
 }
@@ -149,6 +151,7 @@ color:  red;
     float: right;
     width: 25%;
      margin-top: 15px;
+    margin-bottom:15px
 }
 
  .dropdown {
@@ -158,7 +161,7 @@ color:  red;
 
  .dropdown-content{
     position: absolute;
-    background-color: white;
+    background-color: #5562ec;
     display: none;
 }
 .dropdown-content {
@@ -204,7 +207,7 @@ margin-bottom: 4px;
 }
 
 .menu-bar-links a{
-    display: inline-block;
+    display: block;
 }
 
 @media only screen and (min-width: 792px){
