--- a/css/style.css
+++ b/css/style.css
@@ -150,8 +150,8 @@ color:  red;
     box-shadow: inset 0 0 0 0 #e81c2e;
     float: right;
     width: 25%;
-     margin-top: 15px;
-    margin-bottom:15px
+     margin-top: ;
+    margin-bottom:
 }
 
  .dropdown {
