--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ color:  red;
     font-weight: 500;
     border-radius: 60px;
     color: #202C45;
-    background: #ffffff;
+    background: #f93535;
     box-shadow: inset 0 0 0 0 #e81c2e;
     float: right;
     width: 25%;
