--- a/css/style.css
+++ b/css/style.css
@@ -346,6 +346,7 @@ margin-bottom: 4px;
     max-width: 100%;
     float: right;
     padding: 0 15px 0 15px;
+    margin-top:30px;
 }
 
 .about .container-content {
@@ -368,9 +369,7 @@ margin-bottom: 4px;
     position: relative;
     width: 100%;
     max-width: 700px;
-    margin: 0 auto 45px auto;
-    margin-bottom: 30px;
-    margin-left: 0;
+   
 }
 
 .about .about-content {
@@ -378,14 +377,15 @@ margin-bottom: 4px;
 }
 
 .about .about-content ul {
-    margin: 0;
+    margin-top: 18px;
     padding: 0;
     list-style: none;
     margin-bottom: 25px;
+    font-size:20px
 }
 
 .about .about-content ul li i {
-    margin-right: 8px;
+    margin-right: 20px;
     color: #E81C2E;
 }
 
@@ -1114,7 +1114,7 @@ overflow: auto;
     position: relative;
     width: 100%;
     max-width: 700px;
-    margin: 0 auto 45px auto;
+   margin: 0 auto 45px auto;
 }
 
 .text-center {
