--- a/css/style.css
+++ b/css/style.css
@@ -623,6 +623,13 @@ width:  100%;
     font-weight: 700;
     margin-top:  5px;
     text-transform: capitalize;
+    padding-bottom:15px;
+}
+
+@media(max-width:792px){
+    .price .h2 {
+        font-size:30px;
+    }
 }
 
 .column-card {
