--- a/css/style.css
+++ b/css/style.css
@@ -877,10 +877,16 @@ overflow: auto;
 .team  h3 {
 
     margin: 0;
-    font-size: 35px;
+    font-size: 45px;
     font-weight: 700;
     text-transform: capitalize;
     padding-top: 15px;
+}
+
+@media(max-width:779px){
+    .team  h3 {
+        font-size:30px;
+    }
 }
 
  .team .txt  p::after {
