--- a/css/style.css
+++ b/css/style.css
@@ -884,6 +884,7 @@ overflow: auto;
     padding-top: 15px;
 }
 
+
 @media(max-width:779px){
     .team  h3 {
         font-size:30px;
@@ -1186,7 +1187,7 @@ overflow: auto;
 }
 
 .blog .post {
-padding: 25px 0 25px 0;
+padding: 0px 0 25px 0;
 }
 
 
@@ -1194,6 +1195,7 @@ padding: 25px 0 25px 0;
  width: 33.33%;
  float:  left;
  padding-left: 15px;
+ margin-top:15px;
 }
 
 .blog .image { 
@@ -1207,7 +1209,7 @@ padding: 25px 0 25px 0;
 }
 
 .image-meta {
-    margin-top: 25px;
+    margin-top: 10px;
 
 }
 
@@ -1498,5 +1500,7 @@ transition: .5s;
 @media(max-width: 550px){
     .container .text{ display: none;}
 }
-    
+    .image-text a{
+        color: black;
+}
     
