--- a/css/style.css
+++ b/css/style.css
@@ -414,7 +414,7 @@ body {
     color: #E81C2E;
 }
 .section-header h2 {
-    margin: 0;
+    margin-bottom: 10;
     font-size: 45px;
     font-weight: 700;
     text-transform: capitalize;
