--- a/css/style.css
+++ b/css/style.css
@@ -624,7 +624,7 @@ width:  100%;
     font-weight: 700;
     margin-top:  5px;
     text-transform: capitalize;
-    padding-bottom:15px;
+    padding-bottom:0px;
 }
 
 @media(max-width:792px){
@@ -709,6 +709,9 @@ width:  100%;
  .shadow { 
     box-shadow: 0 0 30px rgb(0 0 0 / 20%);
     z-index: 1;
+     padding-top:26px;
+     border-radius:18px;
+     margin-bottom:26px;
 }
 
 @media(min-width: 762px){
