--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@
 
 .top-bar .logo h1 {
     margin: -4px 0 0 0;
-    color: #E81C2E;
+    color: #ffa500;;
     font-size: 50px;
     line-height: 50px;
     font-weight: 800;
@@ -92,7 +92,7 @@
 
 .nav-bar{
     width: 100%;
-    background-color: #ffffff;
+    background-color:#ffa500;
 }
 
 .navbar-content{
@@ -146,10 +146,11 @@ color:  red;
     font-weight: 500;
     border-radius: 60px;
     color: #202C45;
-    background: #f93535;
+    background: #6273f3;
     box-shadow: inset 0 0 0 0 #e81c2e;
     float: right;
     width: 25%;
+    font-size:700;
      margin-top: ;
     margin-bottom:
 }
@@ -161,7 +162,7 @@ color:  red;
 
  .dropdown-content{
     position: absolute;
-    background-color: #5562ec;
+    background-color: #ffa500;
     display: none;
 }
 .dropdown-content {
