--- a/css/style.css
+++ b/css/style.css
@@ -198,7 +198,7 @@ color:  red;
 }
 
 .navbar-resoponsive a:hover{
-    background-color: red;
+    color: red;
     letter-spacing:1.5;
 }
 
@@ -208,12 +208,16 @@ color:  red;
  padding: 0px 15px 0px 15px;
  font-weight: 500;
  letter-spacing: 1px;
- background-color: #202C45 ;
+ background-color: #ffa500; ;
 margin-right: 15px;
 margin-bottom: 4px;
-    top: 10px;
+    top: 1px;
     right: 0;
-    position:relative;
+    position:absolute;
+    transition:0.5s
+}
+.navbar-resoponsive button:hover{
+    color:red;
 }
 
 .menu-bar-links a{
