--- a/css/style.css
+++ b/css/style.css
@@ -194,12 +194,12 @@ color:  red;
     font-weight: 700;
     letter-spacing: 1px;
     font-size: 1rem;
-    transition:0.5s;
+    transition: 0s;
 }
 
 .navbar-resoponsive a:hover{
     color: red;
-    letter-spacing:1.5;
+    letter-spacing:1.5px;
 }
 
 .navbar-resoponsive button{
