--- a/css/style.css
+++ b/css/style.css
@@ -292,7 +292,7 @@ margin-bottom: 4px;
     font-size: 16px;
     font-weight: 500;
     color: #ffffff;
-    background: #E81C2E;
+    background: #6273f3;
     border: none;
     border-radius: 60px;
     box-shadow: inset 0 0 0 0 #202c45;
@@ -406,7 +406,7 @@ margin-bottom: 4px;
 
 .about .about-content ul li i {
     margin-right: 20px;
-    color: #E81C2E;
+    color: #f29c00;
 }
 
 body {
@@ -430,7 +430,7 @@ body {
     font-weight: 700;
     letter-spacing: 4px;
     text-transform: uppercase;
-    color: #E81C2E;
+    color: #ffa500;
 }
 .section-header h2 {
     margin-bottom: 10px;
@@ -446,7 +446,7 @@ body {
     height: 2px;
     left: 25%;
     bottom: 0;
-    background: #E81C2E;
+    background: #ffa500;
 }
 
 .section-header.text-left p::after {
