--- a/css/style.css
+++ b/css/style.css
@@ -359,6 +359,12 @@ margin-bottom: 4px;
     padding: 0 15px 0 15px;
 }
 
+@media(min-width:992px){
+    .col-6-1{
+        max-width:50%;
+    }
+}
+
 .col-6-2 {
     max-width: 100%;
     float: right;
