--- a/css/style.css
+++ b/css/style.css
@@ -625,7 +625,7 @@ width:  100%;
 }
 
 .price p {
-    color: black;
+    color: orange;
     font-size: 18px;
     font-weight: 700;
     letter-spacing: 4px;
@@ -641,7 +641,7 @@ width:  100%;
     height: 2px;
     left: 25%;
     bottom: 0;
-    background: black;
+    background: orange;
 }
 
 .price h2 {
