--- a/css/style.css
+++ b/css/style.css
@@ -1141,7 +1141,7 @@ overflow: auto;
     font-size: 25px;
     font-family: "Font Awesome 5 Free";
     font-weight: 900;
-    color: #E81C2E;
+    color: orange;
     margin-right: 10px;
 }
 
