--- a/css/style.css
+++ b/css/style.css
@@ -1160,7 +1160,7 @@ overflow: auto;
 }
 
 .testimonial .owl-dot.active {
-    background: #E81C2E;
+    background: orange;
 }
 
 .section-header {
