--- a/css/style.css
+++ b/css/style.css
@@ -1342,12 +1342,12 @@ padding: 0px 0 25px 0;
 
 .footer {
     padding: 25px 0 25px 0;
-    background-color: #202C45;
+    background-color: orange;
 }
 
 .footer .col-4{
     width: 25%;
-    color:  white;
+    color:  black;
     text-align: ;
     float: left;
     margin-left: 45p;
@@ -1360,7 +1360,7 @@ padding: 0px 0 25px 0;
     font-size: 20px;
     font-weight: 700;
     letter-spacing: 2px;
-    color: #E81C2E;
+    color: black;
 }
 .footer .col-4 p{
 
@@ -1395,7 +1395,7 @@ padding: 0px 0 25px 0;
 }
 
 .footer .list a {
-color:  white;
+color:  black;
 margin-bottom: 25px;
 display: block;
 transition: .5s;
@@ -1421,7 +1421,7 @@ transition: .5s;
     width: 100%;
     height: 45px;
     border: 1px solid white;
-    color:  white;
+    color:  orange;
     margin-bottom: 25px;
     border-radius: 5px;
     padding: 5px;
@@ -1432,7 +1432,7 @@ transition: .5s;
 
 .footer .btn.btn-custom {
     width: 100%;
-    background-color:  ;
+    background-color:  #ffa500;
     box-shadow: inset 0 0 0 0 #e81c2e;
     width: 100%;
     color: white;
@@ -1505,7 +1505,7 @@ transition: .5s;
     right: 15px;
     bottom: 15px;
     transition: .5s;
-    background: #E81C2E;
+    background: #ffa500;
     border-radius: 44px;
     z-index: 9;
 }
