--- a/css/style.css
+++ b/css/style.css
@@ -1421,7 +1421,7 @@ transition: .5s;
     width: 100%;
     height: 45px;
     border: 1px solid white;
-    color:  orange;
+    color: #ffa500;
     margin-bottom: 25px;
     border-radius: 5px;
     padding: 5px;
@@ -1432,7 +1432,7 @@ transition: .5s;
 
 .footer .btn.btn-custom {
     width: 100%;
-    background-color:  #ffa500;
+    background-color:  #6273f3;
     box-shadow: inset 0 0 0 0 #e81c2e;
     width: 100%;
     color: white;
