--- a/css/style.css
+++ b/css/style.css
@@ -1425,7 +1425,7 @@ transition: .5s;
     margin-bottom: 25px;
     border-radius: 5px;
     padding: 5px;
-    background-color: #202c45;
+    background-color: white;
 
 }
 
@@ -1436,7 +1436,7 @@ transition: .5s;
     box-shadow: inset 0 0 0 0 #e81c2e;
     width: 100%;
     color: white;
-    background: red;
+    background: ;
 }
 
 @media( max-width: 992px){
