--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ color:  red;
     font-size: 16px;
     font-weight: 500;
     border-radius: 60px;
-    color: #202C45;
+    color: white;
     background: #6273f3;
     box-shadow: inset 0 0 0 0 #e81c2e;
     float: right;
