--- a/css/style.css
+++ b/css/style.css
@@ -151,8 +151,11 @@ color:  #6273f3;
     float: right;
     width: 25%;
     font-size:700;
-     margin-top: ;
-    margin-bottom:
+     margin-top: -15px ;
+    margin-bottom:;
+        margin-right: -15px;
+    height:66px;
+    border:none;
 }
 
  .dropdown {
