--- a/css/style.css
+++ b/css/style.css
@@ -330,8 +330,8 @@ margin-bottom: 4px;
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color:#ffa500;
-    color:red;
+  background-color:#6273f3;
+    color:white;
 }
 
 .fade {
