--- a/css/style.css
+++ b/css/style.css
@@ -472,8 +472,9 @@ body {
 
 .services .col-6, .services .col-3 {
     width: 100%;
-    padding-left:15px;
+    padding-left:85px;
     text-align:center;
+    padding-right:85px;
 }
 
 
