--- a/css/style.css
+++ b/css/style.css
@@ -757,7 +757,8 @@ width:  100%;
     }
 
 .location-form {
-    padding:  25px 0 25px 0
+    padding:  25px 0 25px 0;
+    background-color:#e6dddd;
 }
 
 .location-form .col-7 {
