--- a/css/style.css
+++ b/css/style.css
@@ -758,7 +758,7 @@ width:  100%;
 
 .location-form {
     padding:  25px 0 25px 0;
-    background-color:#e6dddd;
+    background-color:##f3f5e7;
 }
 
 .location-form .col-7 {
@@ -1098,7 +1098,10 @@ overflow: auto;
     position: relative;
     width: 100%;
     padding: 45px 0;
-     background-color: #e6dddd;
+     background-color: #f3f5e7;
+}
+
+;
 }
 
 .testimonial .testimonials-carousel {
