--- a/css/style.css
+++ b/css/style.css
@@ -758,7 +758,7 @@ width:  100%;
 
 .location-form {
     padding:  25px 0 25px 0;
-    background-color:##f3f5e7;
+    background-color:#f3f5e7;
 }
 
 .location-form .col-7 {
