--- a/css/style.css
+++ b/css/style.css
@@ -418,8 +418,8 @@ margin-bottom: -11px;
     margin-top: 10px;
     padding: 0;
     list-style: none;
-    margin-bottom: 25px;
-    font-size:20px
+    margin-bottom: 9px;
+    font-size:px;
 }
 
 .about .about-content ul li i {
