--- a/css/style.css
+++ b/css/style.css
@@ -473,9 +473,9 @@ body {
 
 .services .col-6, .services .col-3 {
     width: 100%;
-    padding-left:85px;
+    padding-left:px;
     text-align:center;
-    padding-right:85px;
+    padding-right:px;
 }
 
 
@@ -484,6 +484,7 @@ body {
 @media  (min-width: 762px) {
 .services .col-6 {
     width: 100%;
+    padding: 0 30px
 }
 }
 
@@ -527,7 +528,7 @@ body {
     margin: 0;
     font-size: 60px;
     line-height: 60px;
-    background-image: linear-gradient(#E81C2E, #202C45);
+    background-image: linear-gradient(#6273f, #6273f);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     transition: .5s;
