--- a/css/style.css
+++ b/css/style.css
@@ -593,7 +593,7 @@ width:  100%;
     float:  left;
     margin-top: 15px;
     font-size: 45px;
-    color: #6273f3;
+    color: black;
 }
 
 .facts .facts-text {
