--- a/css/style.css
+++ b/css/style.css
@@ -743,6 +743,7 @@ width:  100%;
 
 .price{
     padding-bottom: 8px;
+    margin-top: 71px;
 }
 
  .shadow { 
@@ -761,6 +762,7 @@ width:  100%;
 .location-form {
     padding:  25px 0 25px 0;
     background-color:#f9f7f5;
+    margin: 50px 0px;
 
 }
 
