--- a/css/style.css
+++ b/css/style.css
@@ -908,7 +908,7 @@ overflow: auto;
 
 .team {
     text-align: center;
-    margin-top: 25px;
+    margin: 25px 0 34px;
 }
 .team .txt p {
     position: relative;
@@ -987,7 +987,7 @@ overflow: auto;
 
 
 .team .image-text h2 {
-    color: #ffffff;
+    color: black;
     font-size: 20px;
     font-weight: 600;
     letter-spacing: 1px;
@@ -997,7 +997,7 @@ overflow: auto;
 
 .team .image-text p {
     margin: 0;
-    color: #ffffff;
+    color: black;
 }
 
 
@@ -1020,7 +1020,7 @@ overflow: auto;
     padding: 7px 0;
     text-align: center;
     font-size: 16px;
-    color: #ffffff;
+    color: black;
     background: orange;
     border-radius: 40px;
     transition: .5s;
@@ -1031,22 +1031,22 @@ overflow: auto;
 
 .team .col-4:hover .image-text {
     color: white;
-    background: #E81C2E;
+    background: #6273f3;
 }
 
 
 .team .image-text:hover  {
-    background: #E81C2E;
+    background:#6273f3;
 }
 
 
 
 .team .col-4:hover .team-social a {
-    background: #E81C2E;
+    background:#6273f3;
 }
 
 .team .team-social a:hover {
-    color: #202C45;
+    color: white;
 }
 
 
