--- a/css/style.css
+++ b/css/style.css
@@ -1416,7 +1416,7 @@ padding: 0px 0 25px 0;
     background-color: #ffffff;
     border-radius: px;
     text-align: center;
-    padding: 5px;
+    padding: 9px 0px;
     margin-left: 5px;
     width: 40px;
     height: 40px;
