--- a/css/style.css
+++ b/css/style.css
@@ -1625,3 +1625,10 @@ transition: .5s;
      font-size: 13px;
   }
 }
+
+ .caraousel img  {
+     filter:brightness(0.5);
+    width: 100%;
+    height: 100%;
+}
+     
