--- a/css/style.css
+++ b/css/style.css
@@ -1607,7 +1607,8 @@ transition: .5s;
      transform: translate(-50%, -50%);
      margin:0;
      color: white;
-     font-size: px
+     font-size: px;
+        transition: 0.5s;
   }  
 
  
