--- a/css/style.css
+++ b/css/style.css
@@ -1297,6 +1297,7 @@ padding: 0px 0 25px 0;
 .image-meta a {
     padding-left: 5px;
     color:black;
+    font-weight:700;
 }
 
 .image-meta a:hover{
