--- a/css/style.css
+++ b/css/style.css
@@ -176,12 +176,13 @@ color:  #6273f3;
    z-index: 2;
 }
 
-.dropdown-content  a {
+.dropdown-content  a:not(:last-child):after {
     display: block;
     color: #ffffff;
     padding: 15px;
     font-weight: 500;
     letter-spacing: 1px;
+    border-bottom: 1px solid black;
 }
 
 .dropdown:hover .dropdown-content {
