--- a/css/style.css
+++ b/css/style.css
@@ -598,7 +598,7 @@ width:  100%;
     float:  left;
     margin-top: 15px;
     font-size: 45px;
-    color: black;
+    color: #6273f3;
 }
 
 .facts .facts-text {
