--- a/css/style.css
+++ b/css/style.css
@@ -875,7 +875,7 @@ font-weight: 700;
 }
 .location-form .col-5 .control-group .form-control{
     height: 45px;
-    color: #ffffff;
+    color: black;
     padding: 0 15px;
     border-radius: 5px;
     border: 1px solid #ffffff;
