--- a/css/style.css
+++ b/css/style.css
@@ -1654,11 +1654,11 @@ transition: .5s;
 
 @media(min-width:1400px){
        .mtr {
-           margin-top: px;
+           margin-top: 0px;
        }
        
        .mt2{
-           margin-top:px;
+           margin-top:0px;
        }
 }
 
