--- a/css/style.css
+++ b/css/style.css
@@ -1652,15 +1652,10 @@ transition: .5s;
        }
 }
 
-@media(min-width:1400px){
-       .mtr {
-           margin-top: px;
-       }
-       
-       .mt2{
-           margin-top:px;
-       }
-}
+@media(max-width:992px){
+   .flexybox {
+       flex-direction:column;
+      }
 
 .dollarPrice{
     color: #6273f3;
