--- a/css/style.css
+++ b/css/style.css
@@ -584,6 +584,7 @@ display:flex;
 margin:15px 0px;
 justify-content:center;
 width:  100%;
+    text-align:center;
 }
 
 @media( min-width : 762px){
