--- a/css/style.css
+++ b/css/style.css
@@ -768,7 +768,7 @@ width:  100%;
 .location-form {
     padding:  65px 0 65px 0;
     background-color:#f2f2f2;
-    margin: 50px 0px;
+    margin: 14px 0px 50px 0px;
 
 }
 
