--- a/css/style.css
+++ b/css/style.css
@@ -1389,7 +1389,7 @@ padding: 0px 0 25px 0;
 .footer {
     padding: 25px 0 25px 0;
     background-color: orange;
-    margin-top: 36px;
+    margin-top: px;
 }
 
 .footer .col-4{
