--- a/css/style.css
+++ b/css/style.css
@@ -1072,7 +1072,7 @@ overflow: auto;
       width: 50%;
 }
  .msf {
-        margin:0 0 0 10px;
+        margin:-40px 0 0 10px;
 }
 
 @media(max-width:562px){
