--- a/css/style.css
+++ b/css/style.css
@@ -1440,7 +1440,7 @@ padding: 0px 0 25px 0;
     width: 40px;
     height: 40px;
     transition:  .5s;
-    width:142px;
+   
 }
 
 .footer-social a:hover {
@@ -1454,6 +1454,7 @@ color:  black;
 margin-bottom: 25px;
 display: block;
 transition: .5s;
+     width:142px;
 }
 
 .footer .list a:hover{
@@ -1691,5 +1692,5 @@ dollarPrice{
 }
 
 .mb{
-    margin-botton:0px;
+    margin-bottom:0px;
 }
