--- a/css/style.css
+++ b/css/style.css
@@ -1694,3 +1694,25 @@ dollarPrice{
 .mb{
     margin-bottom:0px!important;
 }
+
+.button-image {
+    position: fixed;
+    height: 30px;
+    width: 30px;
+    margin: 24px 0 0 -130px;
+    animation: updown 2s ease infinite;
+}
+
+@keyframes updown {
+  0% {
+    transform: translateY(-100%);
+  }
+
+  50% {
+    transform: translateY(100%);
+  }
+
+  100% {
+    transform: translateY(-100%);
+  }
+}
